[FIX] - Text overflow in card description

--- a/src/components/informationCard/informationCard.module.scss
+++ b/src/components/informationCard/informationCard.module.scss
@@ -22,4 +22,11 @@
 
         text-transform: capitalize;
     }
+
+    .description {
+        @include index.default-label(23px, 10px, 100%, 100, 38px, left);
+        max-height: 230px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
 }
